# omnivoz_derive

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: bin.rs  lib.rs
