[package]
name = "omnivoz_derive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ovz_derive"
path = "src/lib.rs"

[[bin]]
name = "ovz_derive_demo"
path = "src/bin.rs"
[dependencies]
rand = "^0.8.4"
aes-gcm = "^0.9.4"
serde = {version = "^1.0.0", features = ["derive"] }
base64 = "^0.13.0"
serde_json = "^1.0.0"